syntax = "proto3";

package profile;

import "criteria.proto";

message Profile{
  string id = 1;
  string name = 2;
  criteria.Basics basics = 3;
  string bio = 4;
  uint64 created_at = 5;
  uint64 updated_at = 6;
}

message GetRandomProfilesRequest{
  string excepted_id = 1;
  criteria.Filter filter = 2;
  uint64 count = 3;
}

message GetRandomProfilesResponse{
  repeated Profile profiles = 1;
}

message GetProfilesRequest{
  string excepted_id = 1;
  criteria.Filter filter = 2;
  uint64 skip = 3;
  uint64 limit = 4;
}

message GetProfilesResponse{
  repeated Profile profiles = 1;
}

message GetProfileByIdRequest{
  string id = 1;
}

message GetProfileByIdResponse{
  Profile profile = 1;
}

message CreateProfileRequest{
  string id = 1;
  string name = 2;
  criteria.Basics basics = 3;
  string bio = 4;
}

message CreateProfileResponse{
  string id = 1;
}

message UpdateProfileRequest{
  string id = 1;
  optional string name = 2;
  optional criteria.Basics basics = 3;
  optional string bio = 4;
}

message UpdateProfileResponse{
  Profile profile = 1;
}

message DeleteProfileRequest{
  string id = 1;
}

message DeleteProfileResponse{
  string id = 1;
}

service ProfileService{
  rpc GetRandomProfiles(GetRandomProfilesRequest) returns (GetRandomProfilesResponse);
  rpc GetProfiles(GetProfilesRequest) returns (GetProfilesResponse);
  rpc GetProfileById(GetProfileByIdRequest) returns (GetProfileByIdResponse);
  rpc CreateProfile(CreateProfileRequest) returns (CreateProfileResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse);
}